# pc-scripts

./: .gitignore  README.md
cmake-example/: .cproject  .project  CMakeLists.txt  Debug.cfg  Debug.launch  Flash.launch  cmake-example Debug.launch  gdb.bat  openocd.bat  swo.py
cmake-example/CMSIS/: CMakeLists.txt
cmake-example/Drivers/: CMakeLists.txt  stm32f4xx_fsmc.h
cmake-example/Src/: CMakeLists.txt  inject.s  main.c
cmake-example/Startup/: CMakeLists.txt  startup_stm32f446retx.s
cmake-example/System/: CMakeLists.txt  stm32f4xx.h  stm32f4xx_conf.h  system_stm32f4xx.c
drive-backup/: launch_backup.bat  launch_backup.sh  run-backup-script.py
ffmpeg/: ffmpeg-copy-quality.bat
keyboard/: keyboard-backlight.sh
make-example/: Academy.make
make-example/Inc/first/second-a/: module-helpers.h
make-example/Src/first/second-a/: main.c  module-helpers.c
network-scripts/: router-bruteforce.py  router-pinger.py  start-hotspot.bat
pdf/: pdfjoin.py
process/: dlltest.py  run-fortnite-affinity.ps1  set-services-auto.bat
